--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@ Experiment 01
 		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
         <script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
+
+        <script src="js/shaders/ConvolutionShader.js"></script>
+        <script src="js/shaders/CopyShader.js"></script>
+        <script src="js/shaders/FilmShader.js"></script>
+        <script src="js/shaders/FocusShader.js"></script>
+
+        <script src="js/postprocessing/EffectComposer.js"></script>
+        <script src="js/postprocessing/MaskPass.js"></script>
+        <script src="js/postprocessing/RenderPass.js"></script>
+        <script src="js/postprocessing/BloomPass.js"></script>
+        <script src="js/postprocessing/ShaderPass.js"></script>
+        <script src="js/postprocessing/FilmPass.js"></script>
+
+        <script type="text/javascript" src="js/tweenlite/TweenLite.min.js"></script>
 		<script type="text/javascript" src="js/Detector.js"></script>
 		<script type="text/javascript" src="js/Stats.js"></script>	
-		<script type="text/javascript" src="js/Sapin.js"></script>	
+        <script type="text/javascript" src="js/Sapin.js"></script>  
+		<script type="text/javascript" src="js/Star.js"></script>	
 		<!-- Entry point -->
 		<script type="text/javascript" src="js/main.js"></script>
     </body>
