--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Experiment 01
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     </head>
     <body>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
 
