--- a/experiment.html
+++ b/experiment.html
@@ -28,11 +28,14 @@ Experiment 01
         <script src="js/postprocessing/FilmPass.js"></script>
 
         <script type="text/javascript" src="js/tweenlite/TweenLite.min.js"></script>
+        <script type="text/javascript" src="js/tweenlite/easing/EasePack.min.js"></script>
 		<script type="text/javascript" src="js/Detector.js"></script>
 		<script type="text/javascript" src="js/Stats.js"></script>	
         <script type="text/javascript" src="js/Sapin.js"></script>  
+        <script type="text/javascript" src="js/SapinPop.js"></script>  
 		<script type="text/javascript" src="js/Star.js"></script>	
-		<!-- Entry point -->
+        
+        <!-- Entry point -->
 		<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
